@@ -1441,3 +1441,5 @@
   Suggested by avb, coded by djGrrr.
 - Fixed SDESC not messaging +s +s clients on local server when it is used, reported by
   dre, patch provided by djGrrr.
+- Fixed SAPART causing a flood of notices from all servers, fun. Reported and patch
+  provided by djGrrr.
